[metadata]
name = star_field
version = 0.0
description = star field
long_description = file: README.md
long_description_content_type = test/markdown
url = https:
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    star_field = star_field.star_field:main