[metadata]
name = star_field
version = 0.3.0
description = star field
long_description = file: README.md
long_description_content_type = test/markdown
url = https://github.com/tech-chad/star_field
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    pygame >= 2.1.0
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    star_field = star_field.star_field:main