[metadata]
name = star_field
version = 0.5.0
description = star field
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/star_field
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    pygame >= 2.1.0
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    star_field = star_field.star_field:main